Implemented InfoCamere integration in order to retrieve the Institution PNPG List for a given Legal Representative, by his userId (converted to TaxId by using PDV) + mocked BE response using APIM + Junit Test for Controller, Service and Resources
