# connector-api/src/main/java/it/pagopa/selfcare/onboarding/connector/api/PartyRegistryProxyConnector.java
@@ -1,0 +1,9 @@
+package it.pagopa.selfcare.onboarding.connector.api;
+
+import it.pagopa.selfcare.onboarding.connector.model.institutions.InstitutionPnPGInfo;
+
+public interface PartyRegistryProxyConnector {
+
+    InstitutionPnPGInfo getInstitutionsByUserFiscalCode(String fiscalCode);
+
+}
